--- a/Zodiac1/app/src/main/res/layout/activity_main.xml
+++ b/Zodiac1/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
+    android:background="#F5F5DC"
     tools:context=".MainActivity">
 
     <TextView
